--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,25 @@
-name: GEOBLINKER-PROD-BUILD
-on:
-  push:
-    branches: [ main ]
+name: Build GeoBlinker
+on: [push, pull_request]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Build with Gradle
-        run: chmod +x gradlew && ./gradlew assembleDebug
+
+      # МАГИЯ: Устанавливаем Gradle 8.0 напрямую в облако
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: 8.0
+
+      # Запускаем через глобальный gradle, а не через ./gradlew
+      - name: Build APK
+        run: gradle assembleDebug --stacktrace
