--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
         with:
-          gradle-version: '8.0' # Добавили .0 для точности
+          gradle-version: '8.0'
 
-      - name: Build APK
-        run: gradle assembleDebug --stacktrace
+      - name: Build APK (Diagnostic)
+        run: ./gradlew assembleDebug --stacktrace --info
