--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,16 @@
 name: Build GeoBlinker
-on: [push, pull_request]
-
+on: [push, workflow_dispatch]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          gradle-version: '8.0'
-
-      - name: Build APK (Diagnostic)
-        run: ./gradlew assembleDebug --stacktrace --info
+      - name: Build APK
+        run: |
+          chmod +x gradlew
+          ./gradlew assembleDebug
