--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,11 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      # Генерируем wrapper прямо в облаке, чтобы не мучаться с бинарниками
-      - name: Generate Gradle Wrapper
-        run: gradle wrapper --gradle-version 8.0
+      # ИСПОЛЬЗУЕМ ОФИЦИАЛЬНЫЙ УСТАНОВЩИК ВЕРСИИ 8.0
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: '8.0'
 
       - name: Build APK
-        run: |
-          chmod +x gradlew
-          ./gradlew assembleDebug --stacktrace
+        run: gradle assembleDebug --stacktrace
